2012-04-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Adapt to updmap.pl => updmap-single.pl.

2012-04-14  Norbert Preining  <preining@logic.at>

	* updmap.pl: rename to updmap-single.pl, we ship updmap.pl now
	via ../texlive/linked_scripts/texlive/updmap.pl

2012-04-10  Karl Berry  <karl@tug.org>

	* fmtutil (main): eradicate double slashes in tmpdir.
	tex-k mail from Alexey Vikhlinin, 8 Apr 2012 17:32:02.

2012-03-12  Karl Berry  <karl@tug.org>

	* updmap.cfg.5: avoid ... at beginning of line.
	Replace Debian-specific text.

2012-02-21  Karl Berry  <karl@tug.org>

	* updmap.pl (help): updates for kanji.

2012-02-10  Norbert Preining  <preining@logic.at>

	* updmap.pl: fix breakage of updmap if a generated file does
	not exist (wrong double substitution of @kanji*@ strings)

2012-02-01  Norbert Preining  <preining@logic.at>

	* updmap.pl: 
	  . support -showoption key that shows the current setting
	  . fix not-acceptance of empty values in key/val -setoption

2012-01-19  Norbert Preining  <preining@logic.at>

	* updmap.pl: 
	  . allow --enable Map foo.map again
	  . support kanjiVariant options and replacement

2011-12-12  Karl Berry  <karl@tug.org>

	* updmap.pl: untabify, formatting.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-11-16  Norbert Preining  <preining@logic.at>

	* updmap.pl: make sure that kanjiEmbed is set to a default value
	if not found in the config file.

2011-11-09  Norbert Preining  <preining@logic.at>

	* updmap.pl: add support for pxdviUse config option in updmap, 
	and generate xdvi-ptex.map if it is set in a similar way as kanjix.map,
	patch based on work of Hironori Kitagawa

2011-11-04  Norbert Preining  <preining@logic.at>

	* updmap.pl: small fixes to documentation of updmap.pl, and fixes
	to --syncwithtrees and --listavail, patch from Hironori Kitagawa

2011-11-02  Norbert Preining  <preining@logic.at>
